fix: prevent overflow for secondary amount

--- a/ui/components/multichain/asset-picker-amount/index.scss
+++ b/ui/components/multichain/asset-picker-amount/index.scss
@@ -9,6 +9,11 @@
 
   &__input {
     & > div {
+      & > div.currency-input__conversion-component  {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        display: inline;
+      }
       // primary (i.e., input) and secondary (i.e., subtext) input sections
       & > div {
         max-width: 150px;
